Update project files and enhance organization for better maintainability.

--- a/src/features/app/client/public/index.html
+++ b/src/features/app/client/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0a0a0f" />
-    <meta name="description" content="Relativity - Structured thinking with AI" />
-    <title>Relativity</title>
+    <meta name="description" content="Relativit - Structured thinking with AI" />
+    <title>Relativit</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;600;700&family=Fraunces:wght@400;600;700&display=swap" rel="stylesheet">
